Thêm token, login để chạy test trên swagger ui
